--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <header></header>
-    <main></main>    
+    <main>
+        <h1>Banner</h1>
+    </main>    
 </body>
 </html>
