--- a/index.html
+++ b/index.html
@@ -4,12 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./sass/style.css">
     <title>Snap</title>
 </head>
 <body>
     <header></header>
-    <main>
-        <h1>Banner</h1>
+    <main class="main">
+        <section class="main__banner">
+            <article class="main__text">
+                <h1>Make remote work</h1>
+                <p>Get your team in sync, no matter your location.<br>Stremline processes, create team rituals, and<br>watch productivity soar.</p>
+                <button>Lean more</button>
+                <div class="main__img-icons">
+                    <figure >
+                        <img src="./images/client-databiz.svg" alt="div1">
+                    </figure>
+                    <figure >
+                        <img src="./images/client-audiophile.svg" alt="div2">
+                    </figure>
+                    <figure >
+                        <img src="./images/client-meet.svg" alt="div3">
+                    </figure>
+                    <figure >
+                        <img src="./images/client-maker.svg" alt="div4">
+                    </figure>
+                </div>
+            </article>
+            <figure class="main__img-banner">
+                <img src="./images/image-hero-desktop.png" alt="banner">
+            </figure>
+            <figure class="main__img-banner2">
+                <img src="./images/image-hero-mobile.png" alt="mobile">
+            </figure>
+        </section>
     </main>    
 </body>
 </html>
