--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./sass/style.css">
+    <link rel="stylesheet" href="/sass/style.css">
     <title>Snap</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <article class="main__text">
                 <h1>Make remote work</h1>
                 <p>Get your team in sync, no matter your location.<br>Stremline processes, create team rituals, and<br>watch productivity soar.</p>
-                <button>Lean more</button>
+                <button>Learn more</button>
                 <div class="main__img-icons">
                     <figure >
                         <img src="./images/client-databiz.svg" alt="div1">
